# WxWidgetsCustomTimer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.copy  README.md  plan.txt
include/: myframe.hpp
src/: main.cpp  myframe.cpp
test/: test.cpp
